--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express": "^4.17.1",
     "helmet": "^4.1.1",
     "mongodb": "^3.6.2",
+    "nanoid": "^3.1.20",
     "winston": "^3.3.3"
   },
   "author": "Shashank",
